k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vingaard-backend
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: vingaard-backend
  template:
    metadata:
      labels:
        app: vingaard-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/zekq88/vingaard-backend:0a6becfc13a897b760c387130b65574f87b2c45a
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: vingaard-backend-service
spec:
  selector:
    app: vingaard-backend
  ports:
    - port: 8000
      targetPort: 8000
