k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vingaard-frontend
spec:
  replicas: 1
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: vingaard-frontend
  template:
    metadata:
      labels:
        app: vingaard-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/zekq88/vingaard-frontend:0a6becfc13a897b760c387130b65574f87b2c45a
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vingaard-frontend-service
spec:
  selector:
    app: vingaard-frontend
  ports:
    - port: 80
      targetPort: 80
